--- a/source/app/components/wi-workflow-machine-learning/template/model-params.html
+++ b/source/app/components/wi-workflow-machine-learning/template/model-params.html
@@ -5,7 +5,7 @@
                 <div class="bordered" style="padding:10px; margin-bottom: 10px" ng-show="!wiWorkflowMachineLearning.workflowConfig.steps[0].disabled">
                     <h4 style="text-align: center">Edit infomation model</h4>
                     <div class="form-group">
-                        <label class="control-label col-sm-3" for="email">Type</label>
+                        <label class="control-label col-sm-3">Type</label>
                         <div class="col-sm-9">
                             <wi-item-dropdown on-wi-dropdown-init="wiWorkflowMachineLearning.onModelTypeListInit" style='width:100%;'
                                 on-item-changed="wiWorkflowMachineLearning.onModelTypeChanged"></wi-item-dropdown>
