--- a/source/app/components/wi-workflow-machine-learning/wi-workflow-machine-learning.html
+++ b/source/app/components/wi-workflow-machine-learning/wi-workflow-machine-learning.html
@@ -191,9 +191,9 @@
             }
             .wizard-control {
                 position:absolute;
-                top: 5px;
-                left: 5px;
-                right: 5px;
+                top: 10px;
+                left: 15px;
+                right: 15px;
             }
         </style>
         <wizard indicators-position="top" on-finish="wiWorkflowMachineLearning.finishWizard()">
@@ -318,7 +318,7 @@
                                 <div class="bordered" style="padding:10px; margin-bottom: 10px" ng-show="!wiWorkflowMachineLearning.workflowConfig.steps[0].disabled">
                                     <h4 style="text-align: center">Edit infomation model</h4>
                                     <div class="form-group">
-                                        <label class="control-label col-sm-3" for="email">Type</label>
+                                        <label class="control-label col-sm-3">Type</label>
                                         <div class="col-sm-9">
                                             <wi-item-dropdown on-wi-dropdown-init="wiWorkflowMachineLearning.onModelTypeListInit" style='width:100%;'
                                                 on-item-changed="wiWorkflowMachineLearning.onModelTypeChanged"></wi-item-dropdown>
@@ -420,7 +420,7 @@
                                         <span class='control-button' ng-class="{'fa fa-chevron-up':  wf.expanded, 'fa fa-chevron-down': !wf.expanded}" ng-click='wf.expanded = !wf.expanded'
                                             style='margin-right:5px;'>
                                         </span>
-                                        <span style='margin-right:10px;padding-right:2px;' ng-click="wf.function();" class='fa fa-play control-button block-button'
+                                        <span style='margin-right:10px;padding-right:2px;' ng-click="wiWorkflowMachineLearning.runStep(wf);" class='fa fa-play control-button block-button'
                                             title="test run"></span>
                                         <span style='font-weight:700;'>{{wf.name}}</span>
                                     </div>
