--- a/source/app/components/wi-workflow-machine-learning/template/curve-selection.html
+++ b/source/app/components/wi-workflow-machine-learning/template/curve-selection.html
@@ -29,13 +29,14 @@
             </wi-scroll>
         </div>
         <div style="margin-left:5px;flex:2;padding:0 5px;overflow-y:auto;">
-            
-        <!-- start edit step 1 -->
-            
             <div style='width:100%;' class='bordered panel panel-default'>
                 <div style='background-color:#eee;' class='panel-heading'>
-                    <span style='font-weight:700;'>Selection curve</span>
-                    <span ng-click="wiWorkflowMachineLearning.addCurveInput()" style="float: right; cursor: pointer; font-size: 14px;"><i class="ti-plus"></i>  Add input curve</span>
+                    <span style='font-weight:700;'>Predict {{wiWorkflowMachineLearning.workflowConfig.model.type}}</span>
+                    <span ng-click="wiWorkflowMachineLearning.addCurveInput()" 
+                        ng-if="wiWorkflowMachineLearning.workflowConfig.model.type=='curve'"
+                        style="float: right; cursor: pointer; font-size: 14px;">
+                        <i class="ti-plus"></i>  Add input curve
+                    </span>
                 </div>
                 <div style='border-top: 1px solid #eee;' class='panel-body'>
                     <ul style='padding-left:0;'>
@@ -54,52 +55,11 @@
                                     style='position:absolute;top:50%;transform:translateY(-50%);left:0.5em;'></span>
                                 <input type="text" style='padding-left:2em;' class='form-control' ng-model='item.label' disabled>
                             </div>
-                            <span ng-if="$index < (wiWorkflowMachineLearning.workflowConfig.model.inputs.length - 1)" ng-click="wiWorkflowMachineLearning.removeCurveInput($index)" style="padding-top: 10px; padding-left: 10px; cursor: pointer"><i class="ti-close"></i></span>
+                            <span ng-if="$index < (wiWorkflowMachineLearning.workflowConfig.model.inputs.length - 1) && wiWorkflowMachineLearning.workflowConfig.model.type=='curve'" ng-click="wiWorkflowMachineLearning.removeCurveInput($index)" style="padding-top: 10px; padding-left: 10px; cursor: pointer"><i class="ti-close"></i></span>
                         </li>
                     </ul>
                 </div>
             </div>
-
-        <!-- end edit step 1 -->
-
-            <!-- <div ng-repeat="wf in wiWorkflowMachineLearning.workflowConfig.steps" style='width:100%;' class='bordered panel panel-default' ng-init='wf.expanded = true;parentIdx = $index;'>
-                <div style='background-color:#eee;' class='panel-heading'>
-                    <span class="control-button" ng-class="{'fa fa-chevron-up': wf.expanded, 'fa fa-chevron-down': !wf.expanded}" ng-click='wf.expanded = !wf.expanded'
-                        style='margin-right:5px;'>
-                    </span>
-                    <span ng-click="wf.disabled = !wf.disabled" class='ti-check control-button block-button' ng-class='{"disabled-color": wf.disabled}'
-                        style='margin-right:10px;color:black;padding-left:3px;padding-right:3px;'>
-                    </span>
-                    <span style='font-weight:700;'>{{wf.name}}</span>
-                </div>
-                <div style='border-top: 1px solid #eee;' class='panel-body' ng-show='wf.expanded'>
-                    <ul style='padding-left:0;'>
-                        <li style="display:flex;flex-direction:row; margin-bottom:5px;" ng-repeat="item in wf.inputs track by $index">
-                            <div style='flex-basis:20em;text-align:right;margin-right:5px;'>
-                                <button style='width:100%;vertical-align:baseline;' class="btn btn-default" type="button" ng-click="wiWorkflowMachineLearning.onSelectTemplate(parentIdx, $index)"
-                                    ng-disabled='wf.disabled'>{{item.name}}
-                                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                                </button>
-                            </div>
-                            <div style="flex:1;position:relative;">
-                                <span ng-class="{'zone-table-16x16': item.type==wiWorkflowMachineLearning.FAMILY_GROUP_SELECTION, 'user-define-16x16': item.type==wiWorkflowMachineLearning.FAMILY_SELECTION, 'curve-16x16': item.type==wiWorkflowMachineLearning.CURVE_SELECTION}"
-                                    style='position:absolute;top:50%;transform:translateY(-50%);left:0.5em;'></span>
-                                <input type="text" style='padding-left:2em;' class='form-control' ng-model='item.label' disabled>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div> -->
-            <!-- <div style="padding-bottom: 5px; text-align: right">
-                <button ng-click="wiWorkflowMachineLearning.addCurveInput()" class="btn btn-default">
-                    <span>Add input curve</span>
-                    <i class="curve-new-16x16"></i>
-                </button>
-                <button ng-click="wiWorkflowMachineLearning.removeCurveInput()" class="btn btn-default">
-                    <span>Remove input curve</span>
-                    <i class="curve-remove-16x16"></i>
-                </button>
-            </div> -->
         </div>
     </div>
     <div class="wizard-control">
