--- a/source/app/components/wi-workflow-machine-learning/template/model-params.html
+++ b/source/app/components/wi-workflow-machine-learning/template/model-params.html
@@ -1,4 +1,4 @@
-<div style="display:flex;flex:1;overflow:hidden;flex-direction:column;">
+<div  style="display:flex;flex:1;overflow:hidden;flex-direction:column;">
     <div style="padding: 10px;display:flex;flex:1;flex-direction:row;">
         <div style="display:flex;flex-direction:column;flex:0.3;padding:10px;overflow:auto;">
             <form class="form-horizontal">
@@ -65,7 +65,7 @@
             <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
             <span>Back</span>
         </button>
-        <button wz-next class='btn btn-default' style='float: right;' ng-click="wiWorkflowMachineLearning.refreshInputData();">
+        <button wz-next class='btn btn-default' style='float: right;'>
             <span>Next</span>
             <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
         </button>
