--- a/source/app/components/wi-workflow-machine-learning/template/data-input.html
+++ b/source/app/components/wi-workflow-machine-learning/template/data-input.html
@@ -64,9 +64,13 @@
         </div>
     </div>
     <div class="wizard-control">
-        <button wz-previous ng-click="wiWorkflowMachineLearning.getListModel();" class=' btn btn-default' style='float: left;'>
+        <button wz-previous ng-click="" class=' btn btn-default' style='float: left;'>
             <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
             <span>Back</span>
+        </button>
+        <button wz-next class='btn btn-default' style='float:right;'>
+            <span>Run All</span>
+            <i class='run-16x16' style='vertical-align:text-bottom;'></i>
         </button>
     </div>
 </div>
