--- a/source/app/components/wi-workflow-machine-learning/template/data-input.html
+++ b/source/app/components/wi-workflow-machine-learning/template/data-input.html
@@ -32,7 +32,7 @@
                         <span class='control-button' ng-class="{'fa fa-chevron-up':  wf.expanded, 'fa fa-chevron-down': !wf.expanded}" ng-click='wf.expanded = !wf.expanded'
                             style='margin-right:5px;'>
                         </span>
-                        <span style='margin-right:10px;padding-right:2px;' ng-click="wiWorkflowMachineLearning.runStep(wf);" class='fa fa-play control-button block-button'
+                        <span style='margin-right:10px;padding-right:2px;' ng-click="wiWorkflowMachineLearning.safeRunStep(wf);" class='fa fa-play control-button block-button'
                             title="test run"></span>
                         <span style='font-weight:700;'>{{wf.name}}</span>
                     </div>
