--- a/source/app/components/wi-workflow-player/wi-workflow-player.html
+++ b/source/app/components/wi-workflow-player/wi-workflow-player.html
@@ -422,5 +422,6 @@
     </div>
     <div ng-show="wiWorkflowPlayer.running();"
         style='position:absolute;top:0;left:0;right:0;bottom:0;z-index:10;background-color:rgba(255,255,255,0.5);' 
-        id="workflow-{{wiWorkflowPlayer.idWorkflow}}-spinner" wi-element-ready="wiWorkflowPlayer.createSpinner();"></div>
+        id="workflow-{{wiWorkflowPlayer.idWorkflow}}-spinner" wi-element-ready="wiWorkflowPlayer.createSpinner();">
+    </div>
 </div>
