--- a/source/components/wi-item-dropdown/wi-item-dropdown.html
+++ b/source/components/wi-item-dropdown/wi-item-dropdown.html
@@ -3,7 +3,7 @@
         {{wiItemDropdown.selectedItem.data.label}}
     </ui-select-match>
 
-    <ui-select-choices repeat="item in wiItemDropdown.items|filter:{data:{label:$select.search}}">
+    <ui-select-choices style='{{wiItemDropdown.choiceStyles}}' repeat="item in wiItemDropdown.items|filter:{data:{label:$select.search}}">
         <div><span class='{{wiItemDropdown.icon}}'></span>&nbsp;&nbsp;{{item.data.label}}
             <span style='float:right;display:block;' ng-if="wiItemDropdown.onCtrlBtnClick" class='{{wiItemDropdown.ctrlBtnIcon}}' ng-click="wiItemDropdown.onCtrlBtnClick(item, $event, wiItemDropdown);"></span>
         </div>
