--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -20,11 +20,14 @@ wi-logplot {
         line-height: 2em;
         height: 2em;
         .well-name-container {
-            flex-basis: 50%;
+            flex-basis: 60%;
             display: flex;
             justify-content: flex-end;
             font-size: 14px;
             font-weight: bold;
+        }
+        .well-name {
+            flex: 1;
         }
         .scale-container {
             display: flex;
