update family display

--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="label_treeview">
-    <span>Name</span><span>Unit</span>
+    <span>Name</span><span>Family</span><span>Unit</span>
 </div>
 <div style='background-color:#fff; overflow-y: auto; height: calc(100% - 94px);'
 id="treeContent">
