--- a/source/app/components/wi-explorer/wi-explorer.less
+++ b/source/app/components/wi-explorer/wi-explorer.less
@@ -21,6 +21,33 @@ wi-explorer {
     }
   }
 
+  .label_treeview {
+    border-bottom: 1px solid #cacbd3;
+    border-top: 1px solid #cacbd3;
+    background: rgba(248,248,249,1);
+    background: -moz-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(248,248,249,1)), color-stop(100%, rgba(242,243,244,1)));
+    background: -webkit-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: -o-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: -ms-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: linear-gradient(to bottom, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f9', endColorstr='#f2f3f4', GradientType=0 );
+    display: flex;
+    span {
+      text-align: left;
+      display: flex;
+      text-indent: 10px;
+      border-left: 1px solid #cacbd3;
+      flex: 2;
+      &:first-child {
+        flex: 3;
+        border-left: none;
+      }
+      &:last-child {
+        flex: 1;
+      }
+    }
+  }
   .treeview-header {
     position: relative;
 
