--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -46,8 +46,10 @@ wi-list {
 					margin-left: -4px;
 				}
 				button {
-					padding: 3px;
+					padding: 1px 3px;
 					margin: -3px;
+					width: 100%;
+					text-align: left;
 				}
 			}
 			td:first-child {
