--- a/source/app/components/wi-curve-listing/wi-curve-listing.html
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.html
@@ -5,100 +5,45 @@
 	</wi-toolbar>
 	<wi-toolbar>
 		<wi-button layout="icon-left" type="small" label='Show Reference Window' is-check-type="1" checked='wiCurveListing.isShowRefWin'
-		    tooltip="Show/Hide Reference" handler="wiCurveListing.toggleRefWin"></wi-button>
+		 tooltip="Show/Hide Reference" handler="wiCurveListing.toggleRefWin"></wi-button>
 		<wi-button layout="icon-left" icon="ti-layout-tab-window" label='Reference Window' type="small" tooltip="Properties" handler="wiCurveListing.onRefWinBtnClicked"></wi-button>
 	</wi-toolbar>
 </div>
 <div class="curve-listing-main-content">
 	<div resizable r-directions="['right']" r-flex="true" class="listing">
-		<div>
-			<label class="col-sm-4">
-				<span class="well-16x16"></span>&nbsp;Well
-			</label>
-			<div class="col-sm-8">
-				<select class="form-control wi-form-control" ng-model='wiCurveListing.SelectedWell' ng-options="well as well.properties.name for well in wiCurveListing.wells"
-				    ng-change="wiCurveListing.onChangeWell()"></select>
+		<div class="bordered panel panel-default tree-side">
+			<div style='display:flex;' class='panel-heading'>
+				<label>
+					<span class="well-16x16"></span>&nbsp;Well
+				</label>
+				<div style='flex:1;margin-left: 5px;'>
+					<ui-select ng-model='wiCurveListing.SelectedWell'
+					ng-change="wiCurveListing.onChangeWell()">
+						<ui-select-match>{{$select.selected.name}}</ui-select-match>
+						<ui-select-choices repeat='well in wiCurveListing.wells | filter:{name:$select.search} track by well.id'>
+							{{well.name}}
+						</ui-select-choices>
+						<ui-select-no-choice>
+							Well not found!
+						</ui-select-no-choice>
+					</ui-select>
+				</div>
 			</div>
-		</div>
-		<div>
-			<table class="table table-bordered">
-				<thead>
-					<tr>
-						<th style="flex:2">Name</th>
-						<th style="flex:2">Dataset</th>
-						<th style="flex:1">Select</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="curve in wiCurveListing.curvesArr track by curve.id"
-					ng-class="{modified: curve.modified}">
-						<td style="flex:2">{{curve.name}}
-							<span class="fa fa-undo undo" ng-if="curve.modified" ng-click="wiCurveListing.reverseModified(curve.id)" title='Discard Changes'></span>
-						</td>
-						<td style="flex:2">{{curve.properties.dataset}}</td>
-						<td style="flex:1;text-align:center">
-							<input type="checkbox" ng-model="curve.selected" ng-change="wiCurveListing.onCurveSelectClick(curve)">
-						</td>
-					</tr>
-				</tbody>
-			</table>
+			<div style='position:relative;'>
+				<i style="position:absolute;line-height:2.5em;left:0.5em;font-size:14px;" class="fa fa-search"></i>
+				<input type='text' style='text-indent:1.5em;' ng-model='Filter' size='10' class="form-control">
+			</div>
+			<div style='flex:1;display:flex;flex-direction:column;'>
+				<wi-base-treeview id='__listingtWellTree' name="listingTreeview" config="wiCurveListing.wellConfig" container="wiCurveListing"
+				filter="{{Filter}}" show-id="false">
+				</wi-base-treeview>
+			</div>
 		</div>
 	</div>
 	<div class="editing">
-		<div class="fix-column">
-			<div class="thead">
-				<div class="trow">
-					<div class="tcol">Index</div>
-					<div class="tcol">Depth</div>
-				</div>
-				<div class="trow">
-					<div class="tcol">
-						<input type="number" class='form-control wi-form-control editor'
-						ng-model="wiCurveListing.indexInput" placeholder="Go to ..."
-						wi-enter='wiCurveListing.goToIndex()' min="0">
-					</div>
-					<div class="tcol">
-						<input type="number" class='form-control wi-form-control editor'
-						ng-model="wiCurveListing.depthInput" placeholder="Go to ..."
-						wi-enter='wiCurveListing.goToDepth()' min="0" id="depthInput">
-					</div>
-				</div>
-			</div>
-			<div class="tbody">
-				<div ng-repeat="row in wiCurveListing.loaded track by $index" class="trow">
-					<div class="tcol" ng-class="{focus:$index == wiCurveListing.focus}">{{$index + wiCurveListing.first}}</div>
-					<div class="tcol depth">{{wiCurveListing.depthArr[wiCurveListing.currentIndex][$index + wiCurveListing.first]}}</div>
-				</div>
-			</div>
-		</div>
-		<div class="rest-columns"
-		ng-mousemove="wiCurveListing.onResizing($event)"
-		ng-mouseup="wiCurveListing.onResizeEnd($event)">
-			<div class="thead">
-				<div class="trow">
-					<div class="tcol curve{{curve.id}}" ng-repeat="curve in wiCurveListing.curvesData[wiCurveListing.currentIndex]" ng-if="curve.show">{{curve.datasetName}}
-						<div class="resizeH" ng-mousedown='wiCurveListing.onResizeStart($event, "curve"+curve.id)'
-						></div>
-					</div>
-				</div>
-				<div class="trow">
-					<div class="tcol curve{{curve.id}}" ng-repeat="curve in wiCurveListing.curvesData[wiCurveListing.currentIndex]" ng-if="curve.show">{{curve.name}}
-						<div class="resizeH" ng-mousedown='wiCurveListing.onResizeStart($event, "curve"+curve.id)'
-						></div>
-					</div>
-				</div>
-			</div>
-			<div id="output" class="tbody">
-				<div ng-repeat="row in wiCurveListing.loaded track by $index" ng-init="parentId = $index" class="trow">
-					<div  class="tcol curve{{col.id}}" ng-repeat="col in wiCurveListing.curvesData[wiCurveListing.currentIndex]" ng-if='col.show'
-					ng-class="{'nanValue': wiCurveListing.isNaN(col.data[parentId + wiCurveListing.first])}">
-						<input type="number" class='form-control wi-form-control editor' ng-model="col.data[parentId + wiCurveListing.first]" step="any" ng-change="col.edit = true;wiCurveListing.onModifyCurve(col.id);">
-					</div>
-				</div>
-			</div>
-		</div>
+		<div id="dataContainer" wi-element-ready="wiCurveListing.droppableSetting()" class='active'></div>
 	</div>
-	<div resizable r-directions="['left']" r-flex="true" ng-show="wiCurveListing.isShowRefWin" style="width: 20%; min-width: 10%; max-width: 30%">
+	<div resizable r-directions="['left']" r-flex="true" ng-show="wiCurveListing.isShowRefWin" style="width: 20%; min-width: 10%; max-width: 30%;margin-left:14px;">
 		<!-- <wi-container name='RefCrossplotContainer' title='Reference' close-handler='wiCurveListing.isShowRefWin = false'>
           <wi-reference-window name="wiCurveListingRefWin">
           </wi-reference-window>
@@ -106,3 +51,4 @@
 		refWin
 	</div>
 </div>
+<div id="dragElement"></div>
