--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -31,12 +31,12 @@
                 </div>
             </div>
         </div>
-        <div class="wi-parent-family"
+        <div class="wi-parent-family" ng-if='item.type=="curve"'
             ng-click="wiBaseTreeview.onClick($index, $event, item)"
             ng-dblclick="wiBaseTreeview.onDoubleClick($index)">
             <span class='display-inline-block' style='text-indent:10px;' title="{{item.data.familyName}}">{{item.data.familyName}}</span>
         </div>
-        <div class="wi-parent-unit"
+        <div class="wi-parent-unit" ng-if='item.type=="curve"'
             ng-click="wiBaseTreeview.onClick($index, $event, item)"
             ng-dblclick="wiBaseTreeview.onDoubleClick($index)">
             <span class='display-inline-block' style='text-indent:10px;' title="{{item.data.unit}}">{{item.data.unit}}</span>
