--- a/source/app/components/wi-workflow-machine-learning/template/curve-selection.html
+++ b/source/app/components/wi-workflow-machine-learning/template/curve-selection.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="wizard-control">
-        <button ng-disabled="!wiWorkflowMachineLearning.validate();" ng-click="wiWorkflowMachineLearning.updateNNConfig();" wz-next class='btn btn-default' style='float: right;'>
+        <button ng-disabled="!wiWorkflowMachineLearning.validate();" ng-click="wiWorkflowMachineLearning.updateNNConfig();wiWorkflowMachineLearning.updateCurveSelection();" wz-next class='btn btn-default' style='float: right;'>
             <span>Next</span>
             <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
         </button>
