--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -64,4 +64,35 @@ wi-logplot {
             }*/
         }
     }
+
+    .logplot-footer {
+        display: block;
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+
+        .well-name-container {
+            width: 100px;
+            position: absolute;
+            right: 30px;
+            bottom: 30px;
+            padding: 4px;
+            border: 1px solid #003;
+            border-radius: 2px;
+            background-color: #ffffe0;
+            text-align: center;
+        }
+        .well-name {
+            padding: 5px;
+            margin-bottom: 3px;
+            font-size: 16px;
+            font-weight: bold;
+        }
+        .footer-icon {
+            opacity: 0.4;
+            position: absolute;
+            right: 10px;
+            bottom: 10px;
+        }
+    }
 }
