--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -50,6 +50,9 @@ wi-list {
 					margin: -3px;
 					width: 100%;
 					text-align: left;
+					> * {
+						vertical-align: bottom;
+					}
 				}
 			}
 			td:first-child {
