--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -46,12 +46,19 @@ wi-list {
 					margin-left: -4px;
 				}
 				button {
-					padding: 1px 3px;
-					margin: -3px;
-					width: 100%;
+					padding: 3px;
+					margin: -3px 5px;
+					width: 95%;
 					text-align: left;
-					> * {
-						vertical-align: bottom;
+					display: flex;
+					> *:first-child {
+						flex: 1;
+						overflow: hidden;
+						text-overflow: ellipsis;
+					}
+					> *:last-child {
+						width: 16px;
+						height: 16px;
 					}
 				}
 			}
