--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -442,9 +442,9 @@ table.shadingTable td {
 		font-size: 12px;
 		padding: 4px;
 	}
-	button {
+	multiselect button {
 		font-size: 12px;
-		padding: 4px 20px;
+		padding: 3px 6px;
 	}
 }
 .zonesTable tbody tr td {
