--- a/source/app/components/wii-items/wii-items.less
+++ b/source/app/components/wii-items/wii-items.less
@@ -45,7 +45,7 @@ wii-items {
         }
         tr:first-child {
             height: 1.2em;
-            th { font-size: 12px; }
+            th { font-size: 13px; }
         }
         tr {
             height: 2em;
@@ -54,6 +54,7 @@ wii-items {
             td {
                 padding: 0 12px;
                 border-right: 1px solid #eeeeee;
+                font-size: 12px;
                 &.unit {
                     width: 5%;
                     input {
@@ -63,11 +64,15 @@ wii-items {
                 input {
                     border: 0;
                     background-color: transparent;
-                    width: 90%;
+                    width: calc(100% - 20px);
+                }
+                * {
+                    vertical-align: middle;
                 }
             }
             th {
-                padding: 0 30px;
+                // padding: 0 30px;
+                text-align: center;
                 border-right: 1px solid #eeeeee;
             }
         }
