--- a/source/app/components/wi-workflow/wi-workflow.html
+++ b/source/app/components/wi-workflow/wi-workflow.html
@@ -6,11 +6,11 @@
     </wi-toolbar>
 </div> -->
 <div class="workflow-main-content">
-    <wi-workflow-machine-learning ng-if="wiWorkflow.machineLearning" 
+    <!-- <wi-workflow-machine-learning ng-if="wiWorkflow.machineLearning" 
         name='{{wiWorkflow.WorkflowPlayerName}}' 
         id-project='wiWorkflow.getCurrentProjectId()' id-workflow="wiWorkflow.id">
-    </wi-workflow-machine-learning>
-    <wi-workflow-player ng-if="!wiWorkflow.machineLearning" 
+    </wi-workflow-machine-learning> -->
+    <wi-workflow-player 
         name='{{wiWorkflow.WorkflowPlayerName}}' 
         id-project='wiWorkflow.getCurrentProjectId()' 
         id-workflow="wiWorkflow.id"></wi-workflow-player>
