--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -35,10 +35,9 @@ wi-curve-listing{
         font-size: 3em;
         width: 100%;
         display: inline-block;
-        text-align: right;
+        text-align: center;
         position: absolute;
         top: 50%;
-        right: 10px;
         transform: translateY(-50%);
         z-index: 99;
     }
@@ -53,5 +52,8 @@ wi-curve-listing{
         .wi-parent-unit, .icon-expanded, .wi-parent-family{
             display: none;
         }
+    }
+    .handsontable table{
+        font-size: 13px;
     }
 }
