--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div ng-if="item.data.childExpanded">
+    <div ng-show="item.data.childExpanded">
         <wi-base-treeview
             container="wiBaseTreeview.container"
             config="item.children"
