--- a/source/components/wi-base-treeview/wi-base-treeview.less
+++ b/source/components/wi-base-treeview/wi-base-treeview.less
@@ -24,7 +24,7 @@ wi-base-treeview {
             display: flex;
             height: 26px;
             line-height: 26px;
-            cursor: pointer;
+            // cursor: pointer;
             & > div {
                 text-overflow: ellipsis;
                 white-space: nowrap;
